Renamed project to recom (Remove Comments)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
 
-project(stripper LANGUAGES CXX)
+project(recom LANGUAGES CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY build)
 
@@ -10,6 +10,6 @@ include_directories(src/include)
 
 find_package(docopt 0.6 REQUIRED)
 
-add_executable(stripper
-        src/stripper.cpp)
-target_link_libraries(stripper docopt)
+add_executable(recom
+        src/recom.cpp)
+target_link_libraries(recom docopt)
