--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,16 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY build)
 
 set(CMAKE_CXX_STANDARD 20)
 
-include_directories(src/include)
+include_directories(src src/include)
 
 find_package(docopt 0.6 REQUIRED)
 
 add_executable(recom
         src/recom.cpp)
 target_link_libraries(recom docopt)
+
+# Setup testing
+find_package(GTest REQUIRED)
+include_directories(${GTEST_INCLUDE_DIRS})
+add_executable(tests test/tests.cpp)
+target_link_libraries(tests ${GTEST_LIBRARIES} pthread)
